feat(repo): add nightly builds to pkg.pr.new

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,3 +27,6 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Publish a nightly build
+        run: npx -y pkg-pr-new publish
